Improve photo scaling by scaling container instead of image. Fix layout bug when photos does not have any tags.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -299,14 +299,20 @@ section#gallery-view button:active {
 section#gallery-view button:focus {
 	box-shadow: 0 0 5px 5px orange;
 }
+section#gallery-view button div.img {
+	overflow: hidden;
+	margin: 2px 2px;
+	position: relative;
+}
 section#gallery-view img {
 	border: none;
-	margin: 2px 2px;
+	max-width: 100%;
+	max-height: 100%;
 }
 section#gallery-view button div.more_infos {
 	background-color: rgba(0, 0, 0, 0.8);
 	color: white;
-	margin: -3px 2px 4px 2px;
+	margin: 0 2px 4px 2px;
 	padding-bottom: 2px; 
 }
 section#gallery-view button div.star-me {
